<resources>
    <string name="app_name">TresEnRaya</string>
    <string name="noelia_p_rez_mart_nez">Noelia Pérez Martínez</string>
    <string name="noelia_perez11_educa_madrid_org">noelia.perez11@educa.madrid.org</string>
    <string name="nekane_mendieta_educa_madrid_org">nekane.mendieta@educa.madrid.org</string>
    <string name="nekane_mendieta_galeano">Nekane Mendieta Galeano</string>
    <string name="tres_en_raya">Tres en raya</string>
</resources>
